--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "sass": "^1.77.2"
+    "sass": "^1.77.2",
+    "stripe": "^15.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
