03-pagamento no stripe - aula 1 - gerando sessao de checkout

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,7 @@
 # stripe
 STRIPE_API_KEY=
+STRIPE_SUCCESS_URL=http://localhost:3000/posts
+STRIPE_CANCEL_ULR=http://localhost:3000/
 
 # github
 GITHUB_CLIENT_ID=
