03-pagamento no stripe - aula 2 - redirecinamento para o stripe

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,6 @@
 # stripe
 STRIPE_API_KEY=
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
 STRIPE_SUCCESS_URL=http://localhost:3000/posts
 STRIPE_CANCEL_ULR=http://localhost:3000/
 
