--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^3.4.1",
+    "axios": "^1.7.1",
     "faunadb": "^4.8.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
