01-trabalhando com CMS - aula 4 - consumindo api do prismic cms

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prismicio/client": "^7.5.0",
     "@stripe/stripe-js": "^3.4.1",
     "axios": "^1.7.1",
     "faunadb": "^4.8.0",
