--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "faunadb": "^4.8.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "prismic-dom": "^2.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20.12.12",
+    "@types/prismic-dom": "^2.1.4",
     "@types/react": "^18.3.2",
     "typescript": "^5.4.5"
   }
