--- a/.env.local.example
+++ b/.env.local.example
@@ -1,19 +1,19 @@
 # stripe
-STRIPE_API_KEY=
+STRIPE_API_KEY= # chave fornecida na guia `Developers > API Keys > Secret Key`
 
-NEXT_PUBLIC_STRIPE_PUBLIC_KEY=
+NEXT_PUBLIC_STRIPE_PUBLIC_KEY= # chave fornecida na guia `Developers > API Keys > Publishable Key`
 
-STRIPE_WEBHOOK_SECRET=
+STRIPE_WEBHOOK_SECRET= # chave fornecida na cli do stripe
 
 STRIPE_SUCCESS_URL=http://localhost:3000/posts
 STRIPE_CANCEL_ULR=http://localhost:3000/
 
 # github
-GITHUB_CLIENT_ID=
-GITHUB_CLIENT_SECRET=
+GITHUB_CLIENT_ID= # id fornecida em `Settings > Developer settings > OAuth Apps > New OAuth App`
+GITHUB_CLIENT_SECRET= # chave fornecida em `Settings > Developer settings > OAuth Apps > New OAuth App`
 
 # faunadb
-FAUNADB_KEY=
+FAUNADB_KEY= # chave fornecida em `Security > keys`
 
 # prismic CMS
-PRISMIC_ACCESS_TOKEN=
+PRISMIC_ACCESS_TOKEN= # endpoint fornecido em Settings > API& Security > use this entry point for your API access
